--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="vendor/Skeleton/css/skeleton.css" type="text/css">
     <link rel="stylesheet" href="index.css" type="text/css">
 
+    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
+
 </head>
 
 <body>
