--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,11 @@
 
 <body>
 
-    Hello World!
+    <div class="container">
+        <div class="row">
+            Hello World!
+        </div>
+    </div>
 
     <script type="text/javascript" src="index.js"></script>
 
