register and login seem to work, styles

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,40 @@
 <body>
 
     <div class="container">
-        <div class="row">
-            Hello World!
+        <div id="header" class="row">
+            <div id="title" class="eight columns">
+                <h1 class="main-title">19.GIAP</h1>
+            </div>
+            <div class="two columns">
+                <input id="login-email" class="login-form" type="text" placeholder="email">
+                <input id="login-password" class="login-form" type="password" placeholder="password">
+            </div>
+            <div class="two columns">
+                    <a id="login-submit" class="button login-button" href="#">SUBMIT</a>
+                    <a id="login-register" class="button login-button" href="#">REGISTER</a>
+            </div>
         </div>
+        <div id="main" class="row">
+
+        </div>
+        <div id="footer" class="row">
+
+        </div>
+
+        <!--
+        <div class="row">
+            <div class="four columns">
+                <input id="registration-email" type="text" placeholder="email">
+            </div>
+            <div class="four columns">
+                <input id="registration-password" type="password" placeholder="password">
+            </div>
+            <div class="four columns">
+                <a id="registration-submit" href="#">SUBMIT</a>
+            </div>
+        </div>
+        -->
+
     </div>
 
     <script type="text/javascript" src="index.js"></script>
