day two or something lol

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -4,8 +4,8 @@
   <template>
     <style>
       .card {
-        margin: 24px;
-        padding: 16px;
+        margin: 16px;
+        padding: 12px;
 
         color: #757575;
         border-radius: 5px;
@@ -35,6 +35,42 @@
         color: #212121;
 
         font-size: 22px;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      a paper-button {
+        color: #757575;
+      }
+
+      paper-button.form-button:hover {
+        text-decoration: underline;
+      }
+
+      a:visited paper-button {
+        color: #757575;
+      }
+
+      a paper-icon-button {
+        color: #ffffff;
+      }
+
+      a:visited paper-icon-button {
+        color: #ffffff;
+      }
+
+      .form-button-group {
+        margin-top: 30px;
+      }
+
+      .float-right {
+        float: right;
+      }
+
+      .header-icon {
+        margin-top: 2px;
       }
     </style>
   </template>
