--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -9,6 +8,9 @@
     <meta name="description" content="19th Guards Fighter Aviation Regiment">
 
     <link rel="icon" href="/images/favicon.ico">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
     <!-- See https://goo.gl/qRE0vM -->
     <meta name="theme-color" content="#3f51b5">
@@ -76,20 +78,21 @@
       }
     </script>
 
-    <link rel="import" href="/src/main.html">
+    <link rel="import" href="src/main-app.html">
 
     <style>
       body {
         margin: 0;
-        font-family: 'Roboto', 'Noto', sans-serif;
+        font-family: 'Lora', serif;
         line-height: 1.5;
         min-height: 100vh;
-        background-color: #eeeeee;
+        background-color: #666666;
       }
     </style>
   </head>
+
   <body>
-    <my-app></my-app>
-    <!-- Built with love using Polymer Starter Kit -->
+    <main-app></main-app>
   </body>
+
 </html>
