--- a/src/home.html
+++ b/src/home.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view3">
+<dom-module id="home-page">
   <template>
     <style include="shared-styles">
       :host {
@@ -12,16 +12,16 @@
     </style>
 
     <div class="card">
-      <div class="circle">3</div>
-      <h1>View Three</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+      <h1>19th Guards Fighter Aviation Division</h1>
+      <p>
+         Welcome to the 19th Guards homepage!
+      </p>
     </div>
   </template>
 
   <script>
     Polymer({
-      is: 'my-view3'
+      is: 'home-page'
     });
   </script>
 </dom-module>
