--- a/src/main-app.html
+++ b/src/main-app.html
@@ -10,15 +10,20 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="my-icons.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/polymerfire/firebase-app.html">
+<link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
 
-<dom-module id="my-app">
+<link rel="import" href="shared-styles.html"></link>
+<link rel="import" href="custom-icons.html"></link>
+
+<dom-module id="main-app">
   <template>
-    <style>
+    <style include="shared-styles">
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #9A070B;
         --app-secondary-color: black;
-
+        --app-drawer-width: 180px;
         display: block;
       }
 
@@ -36,38 +41,66 @@
 
       .drawer-list a {
         display: block;
-
         padding: 0 16px;
-
         text-decoration: none;
-
         color: var(--app-secondary-color);
-
         line-height: 40px;
       }
 
       .drawer-list a.iron-selected {
         color: black;
-
         font-weight: bold;
       }
+
+      a.header-option {
+        padding: 2px 0px 2px 0px;
+        color: #ffffff;
+        font-size: 12px;
+        float:right;
+        width: 65%;
+      }
+
+      a.header-option:hover {
+        text-decoration: underline;
+      }
+
+      div.header-option-group {
+        float: right;
+        margin-left: -25px;
+      }
+
+      a.drawer-option {
+
+      }
+
+      .header-icon {
+        margin-top: 2px;
+      }
+
     </style>
+
+    <firebase-app
+      auth-domain="giap-80ec2.firebaseapp.com"
+      database-url="https://giap-80ec2.firebaseio.com"
+      api-key="AIzaSyBvWg_JPft53Qn_-FaSpim-P9tNnjzJeus"
+      storage-bucket="giap-80ec2.appspot.com">
+    </firebase-app>
 
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
         pattern="/:page"
         data="{{routeData}}"
-        tail="{{subroute}}"></app-route>
+        tail="{{subroute}}">
+    </app-route>
 
     <app-drawer-layout fullbleed>
       <!-- Drawer content -->
       <app-drawer>
-        <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="/view1">View One</a>
-          <a name="view2" href="/view2">View Two</a>
-          <a name="view3" href="/view3">View Three</a>
+          <a class="drawer-option" id="home" name="home" href="/home">Home</a>
+          <a class="drawer-option" name="view-1" href="/view-1">View One</a>
+          <a class="drawer-option" name="view-2" href="/view-2">View Two</a>
         </iron-selector>
       </app-drawer>
 
@@ -77,19 +110,33 @@
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
+            <div main-title>19.GIAP</div>
+            <spacer></spacer>
+            <div>
+              <a href="/login" title="Sign In" tabindex="-1">
+                <paper-icon-button class="header-icon" icon="icons:account-circle"></paper-icon-button>
+              </a>
+              <div class="header-option-group">
+                <a class="header-option" href="/login" title="Sign In" tabindex="-1">Login</a>
+                <a class="header-option" href="/register" title="Register" tabindex="-1">Register</a>
+              </div>
+            </div>
           </app-toolbar>
+
         </app-header>
 
         <iron-pages
             selected="[[page]]"
             attr-for-selected="name"
-            fallback-selection="view404"
-            role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-view404 name="view404"></my-view404>
+            fallback-selection="error-404"
+            role="main-app">
+          <home-page id="home" name="home"></home-page>
+          <login-page id="login" name="login"
+              user={{user}} signedIn={{signedIn}}></login-page>
+          <register-page id="register" name="register"></register-page>
+          <view-1 id="view1" signedIn=[[signedIn]] name="view-1"></view-1>
+          <view-2 name="view-2"></view-2>
+          <error-404 name="error-404"></error-404>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
@@ -97,9 +144,14 @@
 
   <script>
     Polymer({
-      is: 'my-app',
+      is: 'main-app',
 
       properties: {
+        user: Object,
+        signedIn: {
+          type: Boolean,
+          value: false
+        },
         page: {
           type: String,
           reflectToAttribute: true,
@@ -112,17 +164,16 @@
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'view1';
+        this.page = page || 'home';
       },
 
       _pageChanged: function(page) {
-        // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+        var resolvedPageUrl = this.resolveUrl(page + '.html');
         this.importHref(resolvedPageUrl, null, this._showPage404, true);
       },
 
       _showPage404: function() {
-        this.page = 'view404';
+        this.page = 'error-404';
       }
     });
   </script>
