actually done for the day

--- a/src/home.html
+++ b/src/home.html
@@ -12,9 +12,10 @@
     </style>
 
     <div class="card">
-      <h1>19th Guards Fighter Aviation Division</h1>
+      <h1>Welcome to the home of the 19th Guards!</h1>
       <p>
-         Welcome to the 19th Guards homepage!
+         This is the home of the 19th Guards Fighter Aviation Regiment, a semi-historical
+         unit flying VVS on Il-2 Sturmovik. Some other info will go here later too.
       </p>
     </div>
   </template>
