--- a/src/main-app.html
+++ b/src/main-app.html
@@ -99,6 +99,9 @@
       <app-drawer>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a class="drawer-option" id="home" name="home" href="/home">Home</a>
+          <a class="drawer-option" name="about" href="#">About Us</a>
+          <a class="drawer-option" name="roster" href="#">Roster</a>
+          <a class="drawer-option" name="roster" href="#">Forum</a>
           <a class="drawer-option" name="view-1" href="/view-1">View One</a>
           <a class="drawer-option" name="view-2" href="/view-2">View Two</a>
         </iron-selector>
