routing, started to mess with firebase db

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       }
     </script>
 
-    <link rel="import" href="src/main-app.html">
+    <link rel="import" href="/src/main-app.html">
 
     <style>
       body {
