--- a/src/main-app.html
+++ b/src/main-app.html
@@ -85,6 +85,11 @@
       api-key="AIzaSyBvWg_JPft53Qn_-FaSpim-P9tNnjzJeus"
       storage-bucket="giap-80ec2.appspot.com">
     </firebase-app>
+    <firebase-auth
+      id="auth"
+      user="{{user}}"
+      signed-in="{{signedIn}}">
+    </firebase-auth>
 
     <app-location route="{{route}}"></app-location>
     <app-route
@@ -100,8 +105,8 @@
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a class="drawer-option" id="home" name="home" href="/home">Home</a>
           <a class="drawer-option" name="about" href="#">About Us</a>
-          <a class="drawer-option" name="roster" href="#">Roster</a>
-          <a class="drawer-option" name="roster" href="#">Forum</a>
+          <a class="drawer-option" name="roster" href="/roster">Roster</a>
+          <a class="drawer-option" name="forum" href="#">Forum</a>
           <a class="drawer-option" name="view-1" href="/view-1">View One</a>
           <a class="drawer-option" name="view-2" href="/view-2">View Two</a>
         </iron-selector>
@@ -115,13 +120,22 @@
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div main-title>19.GIAP</div>
             <spacer></spacer>
-            <div>
+            <div hidden$="[[signedIn]]">
               <a href="/login" title="Sign In" tabindex="-1">
                 <paper-icon-button class="header-icon" icon="icons:account-circle"></paper-icon-button>
               </a>
               <div class="header-option-group">
                 <a class="header-option" href="/login" title="Sign In" tabindex="-1">Login</a>
                 <a class="header-option" href="/register" title="Register" tabindex="-1">Register</a>
+              </div>
+            </div>
+            <div hidden$="[[!signedIn]]">
+              <a href="/login" title="Profile" tabindex="-1">
+                <paper-icon-button class="header-icon" icon="icons:account-circle"></paper-icon-button>
+              </a>
+              <div class="header-option-group">
+                <a class="header-option" href="#" title="Profile" tabindex="-1">Profile</a>
+                <a class="header-option" title="Sign Out" tabindex="-1" on-tap="signOut">Sign Out</a>
               </div>
             </div>
           </app-toolbar>
@@ -135,9 +149,11 @@
             role="main-app">
           <home-page id="home" name="home"></home-page>
           <login-page id="login" name="login"
-              user={{user}} signedIn={{signedIn}}></login-page>
-          <register-page id="register" name="register"></register-page>
-          <view-1 id="view1" signedIn=[[signedIn]] name="view-1"></view-1>
+              user="{{user}}" signed-in="{{signedIn}}"></login-page>
+          <register-page id="register" name="register"
+            user="{{user}}" signed-in="{{signedIn}}"></register-page>
+          <roster-page id="roster" name="roster" route={{subroute}}></roster-page>
+          <view-1 id="view1" signed-in="[[signedIn]]" name="view-1"></view-1>
           <view-2 name="view-2"></view-2>
           <error-404 name="error-404"></error-404>
         </iron-pages>
@@ -153,7 +169,8 @@
         user: Object,
         signedIn: {
           type: Boolean,
-          value: false
+          observer: '_signedInChanged',
+          notify: true
         },
         page: {
           type: String,
@@ -165,6 +182,20 @@
       observers: [
         '_routePageChanged(routeData.page)'
       ],
+
+      signOut: function() {
+        console.log('sign out');
+        this.$.auth.signOut().then(function() {
+          console.log('signed out successfully');
+        }, function(error) {
+          console.log('sign out error');
+          console.log(error);
+        })
+      },
+
+      _signedInChanged: function(signedIn) {
+        console.log('signedIn changed to ' + signedIn);
+      },
 
       _routePageChanged: function(page) {
         this.page = page || 'home';
