before drunk coding at oakleys

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" href="/images/favicon.ico">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Droid+Serif|Roboto" rel="stylesheet">
 
     <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#3f51b5">
+    <meta name="theme-color" content="#9A070B">
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -29,7 +29,7 @@
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="/images/favicon.ico">
-    <meta name="msapplication-TileColor" content="#3f51b5">
+    <meta name="msapplication-TileColor" content="#9A070B">
     <meta name="msapplication-tap-highlight" content="no">
 
     <script>
@@ -83,7 +83,7 @@
     <style>
       body {
         margin: 0;
-        font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif;
         line-height: 1.5;
         min-height: 100vh;
         background-color: #666666;
