finished register and login forms

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <style>
       body {
         margin: 0;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Roboto', 'Noto', sans-serif;
         line-height: 1.5;
         min-height: 100vh;
         background-color: #666666;
