--- a/src/home/home-page.html
+++ b/src/home/home-page.html
@@ -1,5 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+
+<link rel="import" href="../shared-styles.html">
 
 <dom-module id="home-page">
   <template>
@@ -12,7 +13,7 @@
     </style>
 
     <div class="card">
-      <h1>Welcome to the home of the 19th Guards!</h1>
+      <h1 class="serif">Welcome to the home of the 19th Guards!</h1>
       <p>
          This is the home of the 19th Guards Fighter Aviation Regiment, a semi-historical
          unit flying VVS on Il-2 Sturmovik. Some other info will go here later too.
