--- a/src/error/error-404.html
+++ b/src/error/error-404.html
@@ -8,17 +8,12 @@
 
         padding: 10px 20px;
       }
-      p {
-        font-size: 12px;
-      }
     </style>
 
     <div class="card">
-      <p>
-        404 - Page Not Found.
-      </p>
+      <h1 class="serif">404 - Page Not Found.</h1>
       <a href="/home" title="Head back home" tabindex="-1">
-        <paper-button class="form-button" id="back-home">Head back home.</paper-button>
+        <paper-button class="form-button" id="back-home">Home</paper-button>
       </a>
     </div>
   </template>
