--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -9,6 +9,7 @@
         --app-drawer-width: 180px;
         display: block;
       }
+
       .serif {
         font-family: 'Droid Serif', serif;
       }
@@ -20,34 +21,26 @@
       .card {
         margin: 24px;
         padding: 16px;
-
         color: #757575;
-        border-radius: 5px;
         background-color: #fff;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
       .circle {
         display: inline-block;
-
         width: 64px;
         height: 64px;
-
         text-align: center;
-
         color: #555;
         border-radius: 50%;
         background: #ddd;
-
         font-size: 30px;
         line-height: 64px;
       }
 
       h1 {
         margin: 16px 0;
-
         color: #212121;
-
         font-size: 22px;
       }
 
@@ -76,9 +69,9 @@
       }
 
       .form-button {
-        padding: 3px 10px;
+        padding: 6px 12px;
         border: 1px solid #757575;
-        border-radius: 5px;
+        cursor: pointer;
       }
 
       .form-button:hover {
@@ -95,12 +88,15 @@
       }
 
       .form-input-desc {
-        font-size: 8pt;
+        margin-top: -7px;
+        margin-bottom: -7px;
+        font-size: 12px;
         width: 100%;
+        text-align: right;
       }
 
       .form-error {
-        color: red;
+        color: #dd2c00;
       }
 
       @media screen and (max-width: 768px) {
@@ -113,7 +109,7 @@
       @media screen and (max-width: 414px) {
         .card {
           margin: 12px;
-          padding: 8px;
+          padding: 9px;
         }
       }
     </style>
