--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -48,20 +48,12 @@
         text-decoration: none;
       }
 
-      a paper-button {
+      a {
         color: #757575;
       }
 
-      a:visited paper-button {
+      a:visited {
         color: #757575;
-      }
-
-      a paper-icon-button {
-        color: #ffffff;
-      }
-
-      a:visited paper-icon-button {
-        color: #ffffff;
       }
 
       .form-button-group {
