--- a/src/error/error-404.html
+++ b/src/error/error-404.html
@@ -1,11 +1,12 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+
+<link rel="import" href="../shared-styles.html">
 
 <dom-module id="error-404">
   <template>
     <style include="shared-styles">
       :host {
         display: block;
-
         padding: 10px 20px;
       }
     </style>
