--- a/src/home/home-page.html
+++ b/src/home/home-page.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/google-youtube/google-youtube.html">
 
 <link rel="import" href="../shared-styles.html">
 
@@ -13,6 +14,8 @@
 
     <div class="card">
       <h1 class="serif">Welcome to the home of the 19th Guards!</h1>
+    </div>
+    <div class="card">
       <p>
          This is the home of the 19th Guards Fighter Aviation Regiment, a semi-historical
          unit flying VVS on Il-2 Sturmovik. Some other info will go here later too.
@@ -22,7 +25,7 @@
 
   <script>
     Polymer({
-      is: 'home-page'
+      is: 'home-page',
     });
   </script>
 </dom-module>
