weirdness with sw-precache-config and instanceCount again

--- a/src/register/register-page.html
+++ b/src/register/register-page.html
@@ -207,6 +207,7 @@
         }
         this.$.document.data = userRecord;
         this.$.document.save('/users', uid);
+        window.location = '/home';
       },
 
       _setError: function(msg) {
